[package]
name = "type_utils"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.3.0"
edition = "2021"
description = "Generate types based on existing types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Person-93/type_utils"

[lib]
proc-macro = true

[dependencies]
nullable-result = "0.7.0"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }
